--- a/index.qmd
+++ b/index.qmd
@@ -22,4 +22,4 @@ I am currently a postdoc at the medical university at JGU-Mainz, working with Th
 
 ### Background
 
-I started my research career working on synaptic transmission in mouse models of Alzheimer's disease, also investigating the glial response (2015-2017, UCL). For my PhD, I moved into the field of mechanobiology, looking at physical brain changes in healthy ageing and Alzheimer's disease, using atomic force microscopy (2017-2021, UCL & University of Brighton).
+I started my research career working on synaptic transmission in mouse models of Alzheimer's disease, also investigating the glial response (*2015-2017, UCL*). For my PhD, I moved into the field of mechanobiology, looking at physical brain changes in healthy ageing and Alzheimer's disease, using atomic force microscopy (*2017-2021, UCL & University of Brighton*).
