--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,9 @@
 ---
 title: "Chloe M. Hall, Ph.D."
 about:
-  template: jolla
+  template: solana
   image: IMG_3650.jpg
-  image-width: 9cm
+  image-width: 10cm
   image-shape: round
   links:
     - icon: twitter
