--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ about:
 
 I am an interdisciplinary scientist, interested in the mechanobiology of the brain, particularly in neurodegenerative diseases and traumatic brain injury.
 
-I am currently a postdoc at the medical university at JGU-Mainz, working with Thomas Mittmann. I am now working to understand the role of mechanosensation following traumatic brain injury.
+I am currently a postdoc at the medical university at JGU-Mainz, working with Prof. Thomas Mittmann. I am now working to understand the role of mechanosensation following traumatic brain injury.
 
 ### Background
 
